# capstone_project

./: CLAUDE.md  DATASET_README.md  README.md  ROADMAP_FLOWER.md  SSFL_FLOWER_INFRASTRUCTURE_PLAN.md  SSFL_comprehensive_summary.md  Semisupervised_Federated-Learning-Based_Intrusion_Detection_Method_for_Internet_of_Things.txt  dataset_guide.md  implementation_plan.md  main.py  opus_report.md  prepare_data_ml.ipynb  prepare_dataset.py  pyproject.toml  quick_test.py  run_simulation.py  ssfl_concept_guide.md  test_model.py  test_results.md  walkthrough.md
conf/: config.yaml
docs/: SSFL_FLOWER_INFRASTRUCTURE_PLAN.md  test_results.md
include/: README.md
logs/: history.json
metrics/: per_round.csv  per_round.json  summary.json
prepared_data/: feat_max.npy  feat_min.npy
prepared_data/open/: X.npy  X_2d.npy  device_ids.npy  y.npy
prepared_data/private/: device_ids.npy  y.npy
prepared_data/scenario_1/: summary.json
prepared_data/scenario_2/: summary.json
prepared_data/scenario_3/: summary.json
prepared_data/test/: device_ids.npy  y.npy
prepared_data_ml/: feat_max.npy  feat_min.npy  label_map.json
src/: __init__.py  client_app.py  config.py  data.py  model.py  server_app.py  train.py  utils.py
src/data/: __init__.py  (+1 more)
ssfl_project/: client.py  config.py  main.py  model.py  server.py  strategy.py  utils.py
test/: conftest.py  generate_inventory.py  run_tests.py  test_data_preparation.py  test_utils.py
tests/: conftest.py  generate_inventory.py  pytest.ini  run_tests.py  test_client.py  test_config.py  test_main.py  test_server.py  test_strategy.py
(+903 files in other folders)
